# guile-sly

./: .gitignore  AUTHORS  INSTALL.org  Makefile.am  README  README.org  TODO.org  configure.ac  guile.am  package.scm  pre-inst-env.in  sandbox  sandbox.in  sly.scm
2d/: agenda.scm  animation.scm  audio.scm  color.scm  config.scm.in  coroutine.scm  event.scm  font.scm  fps.scm  game.scm  helpers.scm  keyboard.scm  live-reload.scm  math.scm  mouse.scm  rect.scm  repl.scm  shader.scm  signal.scm  signals.scm  sprite.scm  texture.scm  tileset.scm  time.scm  transform.scm  vector.scm  vector2.scm  window.scm
2d/repl/: repl.scm
2d/wrappers/: freeimage.scm  gl.scm  util.scm
data/: AUTHORS  Makefile.am  mascot.txt
data/fonts/: AUTHORS
data/shaders/: default-fragment.glsl  default-vertex.glsl  font-vertex.glsl  sprite-fragment.glsl  sprite-vertex.glsl
doc/: Makefile.am  audio.texi  game.texi  graphics.texi  introduction.texi  math.texi  scripting.texi  sly.texi
doc/api/: init.texi  input.texi  math.texi  rendering.texi  signals.texi  time.texi  utils.texi
doc/graphics/: font.texi  texture.texi  tileset.texi
examples/: Makefile.am  animation.scm  common.scm  coroutine.scm  font.scm  joystick.scm  life.scm  particles.scm  pong.scm  rewrite-test.scm  scene-graph.scm  shader.scm  simple.scm  square-drop.scm  tilemap.scm  transition.scm
examples/2048/: 2048  2048.scm
examples/guile-2048/: guile-2048.scm
examples/images/: AUTHORS
examples/mines/: mines.scm
examples/shaders/: fragment-shader.glsl  vertex-shader.glsl
sly/: agenda.scm  animation.scm  audio.scm  cache.scm  camera.scm  color.scm  config.scm  config.scm.in  coroutine.scm  event.scm  font.scm  fps.scm  game.scm  helpers.scm  joystick.scm  keyboard.scm  live-reload.scm  lru-cache.scm  math.scm  mesh.scm  mode.scm  mouse.scm  primitives.scm  quaternion.scm  rect.scm  repl.scm  scene-graph.scm  scene.scm  shader.scm  shape.scm  signal.scm  sprite.scm  texture.scm  tileset.scm  transform.scm  transition.scm  utils.scm  vector.scm  window.scm
sly/input/: joystick.scm  keyboard.scm  mouse.scm
sly/math/: quaternion.scm  rect.scm  transform.scm  tween.scm  vector.scm
sly/render/: camera.scm  color.scm  context.scm  font.scm  framebuffer.scm  group.scm  mesh.scm  model.scm  renderer.scm  scene.scm  shader.scm  shape.scm  sprite.scm  texture.scm  tile-map.scm  tileset.scm  utils.scm  vertex-array.scm
sly/wrappers/: freeimage.scm  gl.scm  gsl.scm  util.scm
tests/math/: vector.scm
