AUTOMAKE_OPTIONS = gnu

info_TEXINFOS = sly.texi

guile_TEXINFOS = audio.texi \
                 fdl.texi \
                 game.texi \
                 graphics.texi \
                 graphics/animation.texi \
                 graphics/color.texi \
                 graphics/font.texi \
                 graphics/sprite.texi \
                 graphics/texture.texi \
                 graphics/tileset.texi \
                 sly.texi \
                 introduction.texi \
                 math.texi \
                 math/math.texi \
                 math/rect.texi \
                 math/vector2.texi \
                 scripting.texi \
                 scripting/actions.texi \
                 scripting/agenda.texi \
                 scripting/coroutine.texi
