examplesdir = $(pkgdatadir)/examples
examples_DATA =					\
	animation.scm				\
	coroutine.scm				\
	font.scm				\
	particles.scm				\
	simple.scm				\
	tilemap.scm

imagedir = $(pkgdatadir)/examples/images
image_DATA = 					\
	images/bullet.png			\
	images/p1_front.png			\
	images/princess.png			\
	images/stars.png			\
	images/tiles.png
