## guile-2d
## Copyright (C) 2013, 2014 David Thompson <dthompson2@worcester.edu>
##
## This program is free software: you can redistribute it and/or
## modify it under the terms of the GNU General Public License as
## published by the Free Software Foundation, either version 3 of the
## License, or (at your option) any later version.
##
## This program is distributed in the hope that it will be useful, but
## WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
## General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program.  If not, see
## <http://www.gnu.org/licenses/>.

examplesdir = $(pkgdatadir)/examples
examples_DATA =					\
	animation.scm				\
	coroutine.scm				\
	font.scm				\
	particles.scm				\
	simple.scm				\
	tilemap.scm

imagedir = $(pkgdatadir)/examples/images
image_DATA = 					\
	images/bullet.png			\
	images/p1_front.png			\
	images/princess.png			\
	images/stars.png			\
	images/tiles.png
