## guile-2d
## Copyright (C) 2013, 2014 David Thompson <dthompson2@worcester.edu>
##
## This program is free software: you can redistribute it and/or
## modify it under the terms of the GNU General Public License as
## published by the Free Software Foundation, either version 3 of the
## License, or (at your option) any later version.
##
## This program is distributed in the hope that it will be useful, but
## WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
## General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program.  If not, see
## <http://www.gnu.org/licenses/>.

examplesdir = $(pkgdatadir)/examples
examples_DATA =					\
	animation.scm				\
	common.scm				\
	font.scm				\
	joystick.scm				\
	simple.scm				\
	tilemap.scm				\
	2048/2048.scm				\
	mines/mines.scm

imagedir = $(pkgdatadir)/examples/images
image_DATA = 					\
	images/bullet.png			\
	images/p1_front.png			\
	images/princess.png			\
	images/stars.png			\
	images/tiles.png			\
	2048/tile.png				\
	mines/images/1-mine.png			\
	mines/images/2-mines.png		\
	mines/images/3-mines.png		\
	mines/images/4-mines.png		\
	mines/images/5-mines.png		\
	mines/images/6-mines.png		\
	mines/images/7-mines.png		\
	mines/images/8-mines.png		\
	mines/images/exploded.png		\
	mines/images/flag.png			\
	mines/images/maybe.png			\
	mines/images/mine.png			\
	mines/images/tile-down.png		\
	mines/images/tile-up.png
